--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOTPLOT</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://github.com/dotplotseoul/dotplot/blob/2777c96569c2e925f3927c73540532af3162fe06/style.css"/>
-    <script src="https://github.com/dotplotseoul/dotplot/blob/2777c96569c2e925f3927c73540532af3162fe06/style.css" defer></script>
+    <link rel="stylesheet" href="style.css"/>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
