--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
 </footer>
 
 <div class="banner">
-    <video src="source/video/230307_HHOOK_Reels.mp4" autoplay muted loop></video>
-</div>
-
-<div class="banner2">
-    <video src="source/video/mov_bbb.mp4" autoplay muted loop></video>
+    <video src="source/video/230307_HHOOK_Reels.mp4" autoplay muted loop alt="https://gfycat.com/weepysarcasticblackandtancoonhound"></video>
 </div>
 
 <div class="text-wrapper">
