--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </footer>
 
 <div class="banner">
-    <video src="source/video/230307_HHOOK_Reels.mp4" alt="https://gfycat.com/weepysarcasticblackandtancoonhound" autoplay muted loop ></video>
+    <video src="source/video/230307_HHOOK_Reels.mp4" autoplay muted loop playsinline ></video>
 </div>
 
 <div class="text-wrapper">
